exports[`<Piece /> renders direction buttons when active and game is started 1`] = `
<div
  className="piece piece-free piece-active"
  onMouseDown={[Function]}
  style={
    Object {
      "height": 0,
      "width": 0,
    }
  }>
  <div
    className="move up"
    onMouseDown={[Function]}
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    } />
  <div
    className="move down"
    onMouseDown={[Function]}
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    } />
  <div
    className="move left"
    onMouseDown={[Function]}
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    } />
  <div
    className="move right"
    onMouseDown={[Function]}
    style={
      Object {
        "height": 0,
        "width": 0,
      }
    } />
</div>
`;

exports[`<Piece /> renders with active state 1`] = `
<div
  className="piece piece-free piece-active"
  onMouseDown={[Function]}
  style={
    Object {
      "height": 0,
      "width": 0,
    }
  } />
`;

exports[`<Piece /> renders with default props 1`] = `
<div
  className="piece piece-free "
  onMouseDown={[Function]}
  style={
    Object {
      "height": 0,
      "width": 0,
    }
  } />
`;

exports[`<Piece /> renders with used state 1`] = `
<div
  className="piece piece-used "
  onMouseDown={[Function]}
  style={
    Object {
      "height": 0,
      "width": 0,
    }
  } />
`;
